# kstart

./: .cvsignore  .gitignore  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  autogen  bootstrap  command.c  command.h  config.h.in  configure  configure.ac  configure.in  daemon.c  framework.c  internal.h  k4start.1  k4start.c  k4start.pod  k5start.1  k5start.c  k5start.pod  krb5_err.c  krenew.1  krenew.c  krenew.pod  kstart.c  kstart.pod  kstart.spec  kstart_3.14.orig.tar.gz.delta  kstart_3.14.orig.tar.gz.id  kstart_3.15.orig.tar.gz.delta  kstart_3.15.orig.tar.gz.id  kstart_3.16.orig.tar.gz.delta  (+13 more)
.github/workflows/: build.yaml
ci/: apt-packages  cpanfile  install  kdc-setup-heimdal  kdc-setup-mit  test
ci/files/heimdal/: heimdal-kdc  kdc.conf  krb5.conf
ci/files/mit/: kdc.conf  krb5.conf
commands/: framework.c  internal.h  k5start.c  krenew.c
debian/: NEWS  README.Debian  changelog  control  copyright  examples  rules  watch
debian/patches/: 0001-Add-AM_PROG_AR-to-configure.ac.patch  series
debian/source/: local-patch-header
debian/upstream/: metadata  signing-key.asc
docs/: docknot.yaml  k5start.1  k5start.pod  krenew.1  krenew.pod
examples/: krenew-agent
kafs/: kafs.c  kafs.h  sys-darwin10.c  sys-darwin8.c  sys-linux.c  sys-solaris.c  sys-syscall.c
m4/: kafs.m4  keyutils.m4  krb4.m4  krb5.m4  lib-depends.m4  lib-pathname.m4  snprintf.m4  vamacros.m4
portable/: asprintf.c  k_haspag.c  kafs-api.c  kafs-linux.c  kafs-syscall.c  kafs.h  krb4.h  krb5-extra.c  krb5-renew.c  krb5.h  krb5_err.c  lifetime.c  macros.h  mkstemp.c  setenv.c  strndup.c  system.h  time.h
systemd/: k5start@.service  krenew.service
tests/: TESTS  libtest.c  libtest.h  libtest.pl  runtests.c
tests/data/: README  command  fake-aklog
tests/docs/: pod-spelling-t  pod-t  pod-t.in  spelling-t.in
tests/k4start/: afs-t  afs-t.in  basic-t  basic-t.in  pod-t.in
tests/k5start/: afs-t  afs-t.in  basic-t  basic-t.in  daemon-t  daemon-t.in  errors-t  flags-t  flags-t.in  keyring-t  non-renewable-t  perms-t  pod-t.in  sigchld-t
tests/kafs/: basic-t  basic.c  haspag-t.c
tests/krenew/: afs-t  afs-t.in  basic-t  basic-t.in  daemon-t  daemon-t.in  errors-t  keyring-t  non-renewable-t  pod-t.in
tests/portable/: asprintf-t.c  daemon-t.c  mkstemp-t.c  reallocarray-t.c  strndup-t.c
tests/tap/: basic.c  basic.h  libtap.sh  process.h  string.h
tests/tap/perl/Test/: RRA.pm
tests/tap/perl/Test/RRA/: Automake.pm  Config.pm
tests/util/: concat-t.c  messages-krb5-t.c  messages-t.c  xmalloc-t  xmalloc.c
util/: command.c  command.h  concat.c  concat.h  messages-krb5.c  messages-krb5.h  messages.c  perms.c  perms.h  util.h  xmalloc.c
